<resources>
    <string name="add_edit_title" translatable="false">
        %1$s %2$s
    </string>
    <string name="legacy_details_header" translatable="false">
        %1$s : %2$s
    </string>
    <string name="full_name">Full Name</string>
    <string name="app_name">Wariskan</string>
    <string name="home_instruction">Click add button to start</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="status" translatable="false">Status</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="faith">Faith</string>
    <string name="islam" translatable="false">Islam</string>
    <string name="kafir" translatable="false">Non Islam</string>
    <string name="deceased">Deceased</string>
    <string name="heirs">Heirs</string>
    <string name="heir">Heir</string>
    <string name="dad">Dad</string>
    <string name="mom">Mom</string>
    <string name="husband">Husband</string>
    <string name="wife">Wife</string>
    <string name="child">Child</string>
    <string name="sibling">Sibling</string>
    <string name="grandpa">Grandpa</string>
    <string name="grandma">Grandma</string>
    <string name="grandchild">Grandchild</string>
    <string name="uncle">Uncle</string>
    <string name="male_cousin">Male Cousin</string>
    <string name="nephew">Nephew</string>
    <string name="full_sibling">
        Full Sibling
    </string>
    <string name="paternal_sibling">
        Paternal Sibling
    </string>
    <string name="maternal_sibling">
        Maternal Sibling
    </string>
    <string name="full_brother">
        Full Brother
    </string>
    <string name="paternal_brother">
        Paternal Brother
    </string>
    <string name="maternal_brother">
        Maternal Brother
    </string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="calculate">Calculate</string>
    <string name="thousand">k</string>
    <string name="million">Million</string>
    <string name="billion">Billion</string>
    <string name="yes">
        Yes
    </string>
    <string name="no">
        No
    </string>
    <string-array name="status_array">
        <item>@string/alive</item>
        <item>@string/dead</item>
    </string-array>
    <string-array name="faith_array">
        <item>@string/islam</item>
        <item>@string/kafir</item>
    </string-array>
    <string-array name="gender_array">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string-array name="boolean_array">
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <string-array name="brother_array">
        <item>@string/full_brother</item>
        <item>@string/paternal_brother</item>
        <item>@string/maternal_brother</item>
    </string-array>
    <string-array name="sibling_array">
        <item>@string/full_sibling</item>
        <item>@string/paternal_sibling</item>
        <item>@string/maternal_sibling</item>
    </string-array>
    <string name="query">Query</string>
    <string name="query_one_nephew">
        Is his dad brother of the deceased?
    </string>
    <string name="query_one_male_cousin">
        Is his dad brother of the deceased\'s dad?
    </string>
    <string name="query_one_uncle">
        Is he brother of the deceased\'s dad?
    </string>
    <string name="query_one_grandchild">
        Is his/her dad the son of the deceased?
    </string>
    <string name="query_one_grandma">
        Is she the mom of the deceased\'s dad?
    </string>
    <string name="query_one_grandpa">
        Is he the dad of the deceased\'s dad?
    </string>
    <string name="query_sibling">
        What kind of sibling?
    </string>
    <string name="query_brother">
        What kind of brother?
    </string>
    <string name="et_blank">
        Must be filled
    </string>
    <string name="continuous_rewards_hadith">
        “When a man dies, his good deeds come to an end except three: ongoing charity, beneficial knowledge, and righteous offspring who will pray for him.”\n
        <b>(Muslim)</b>
    </string>
    <string name="abdullah" translatable="false">Abdullah</string>
    <string name="appname" translatable="false">wariskan</string>
    <string name="obtained">Obtained</string>
    <string name="ashabul_furudh" translatable="false">
        Ashabul Furudh
    </string>
    <string name="dad_1_3">
        Dad gets 1/3 if the deceased didn\'t leave child
        and grandchild (An Nisa : 11)
    </string>
    <string name="dad_1_6">
        Dad gets 1/6 if the deceased left child or grandchild
        (An Nisa : 11)
    </string>
    <string name="mom_1_3">
        Mom gets 1/3 if the deceased didn\'t leave child,
        child of son, and number of sibling is less than two (An Nisa : 11)
    </string>
    <string name="mom_1_6">
        Mom gets 1/6 if the deceased left child, child of son,
        or number of sibling is more than one (An Nisa : 11)
    </string>
    <string name="husband_1_2">
        Husband gets 1/2 if the deceased didn\'t left child
        and child of son (An Nisa : 12)
    </string>
    <string name="husband_1_4">
        Husband gets 1/4 if the deceased left child or
        child of son (An Nisa : 12)
    </string>
    <string name="wives_1_4">
        Wives get 1/4 if the deceased didn\'t leave child and child of son.
        Divided equally if more than one (An Nisa : 12)
    </string>
    <string name="wives_1_8">
        Wives get 1/8 if the deceased left child or child of son.
        Divided equally if more than one (An Nisa : 12)
    </string>
    <string name="daughter_1_2">
        Daughter gets 1/2 if alone and the deceased didn\'t
        leave son (An Nisa : 11)
    </string>
    <string name="daughters_2_3">
        Daughters get 2/3 if more than one and the deceased didn\'t
        leave son. Divided equally (An Nisa : 11)
    </string>
    <string name="full_sister_1_2">
        Full sister gets 1/2 if alone, kalalah, and the deceased
        didn\'t leave full brother, daughter, and daughter of son
        (An Nisa : 176)
    </string>
    <string name="full_sisters_2_3">
        Full sisters get 2/3 if more than one, kalalah, and the deceased
        didn\'t leave full brother, daughter, and daughter of son.
        (An Nisa : 176)
    </string>
    <string name="paternal_sister_1_2">
        Paternal sister gets 1/2 if alone, kalalah, and the deceased
        didn\'t leave daughter, daughter of son, full brother,
        full sister, and paternal brother.
    </string>
    <string name="paternal_sisters_2_3">
        Paternal sisters get 2/3 if more than one, kalalah,  and the deceased
        didn\'t leave daughter, daughter of son, full brother,
        full sister, and paternal brother.
    </string>
    <string name="paternal_sisters_1_6">"         Paternal sisters get 1/6 if kalalah, the deceased left only         a full sister, and the deceased         didn't leave full brother and paternal brother     "</string>
    <string name="maternal_siblings_1_3">
        Maternal siblings get 1/3 if more than one and kalalah.
        Divided equally. (An Nisa : 12)
    </string>
    <string name="maternal_sibling_1_6">
        Maternal sibling gets 1/6 if alone and kalalah. (An Nisa : 12)
    </string>
    <string name="dad_of_dad_1_6">
        Dad of dad gets 1/6 if the deceased didn\'t leave dad,
        child, and child of son
    </string>
    <string name="grandmas_1_6">
        Grandmas get 1/6 if the deceased left child, child of son,
        or number of sibling is more than one.
        Divided equally if more than one
    </string>
    <string name="daughter_of_son_1_2">
        Daughter of son gets 1/2 if alone and the deceased didn\'t
        leave daughter and son of son
    </string>
    <string name="daughter_of_son_1_6">
        Daughter of son gets 1/6 if the deceased left
        a daughter and the deceased did\'t leave son of son
    </string>
    <string name="daughters_of_sons_2_3">
        Daughters of sons get 2/3 if more than one and the deceased
        didn\'t leave daughter and son of son. Divided equally.
    </string>
    <string name="mom_special">
        Mom gets special amount (Umar\'s Fatwa). If the deceased left dad
        and spouse, but didn\'t leave child and child of son, mom gets 1/3 of the remaining
        of the legacy after it\'s shared to spouse.
    </string>
    <string name="ashabah" translatable="false">
        Ashabah
    </string>
    <string name="son_secondary">
        Sons get ashabah. Divided equally\n.
        If there is also daughter, divided with ratio 2:1\n.
        (Son get 2x more than daughter)
    </string>
    <string name="daughter_secondary">
        Sons and daughters get
        ashabah, divided with ratio 2:1\n.
        (Son get 2x more than daughter)
    </string>
    <string name="sons_of_sons_secondary">
        Sons of sons get ashabah. Divided equally\n.
        If there is also daughters of sons, divided with ratio 2:1\n.
        (Sons of sons get 2x more than daughters of sons)
    </string>
    <string name="dad_secondary">
        Dad gets ashabah if the deceased didn\'t leave
        son and son of son.
    </string>
    <string name="daughters_of_sons_secondary">
        Sons of sons and daughters of sons get
        ashabah, divided with ratio 2:1\n.
        (Son of son get 2x more than daughter of son)
    </string>
    <string name="full_brothers_secondary">
        Full brothers get ashabah. Divided equally\n.
        If there is also full sister, divided with ratio 2:1\n.
        (Full brothers get 2x more than full sisters)
    </string>
    <string name="full_sisters_secondary">
        Full brothers and full sisters get
        ashabah, divided with ratio 2:1\n.
        (Full brother get 2x more than full sister)
    </string>
    <string name="paternal_brothers_secondary">
        Paternal brothers get ashabah. Divided equally\n.
        If there is also paternal sister, divided with ratio 2:1\n.
        (Paternal brother get 2x more than paternal sister)
    </string>
    <string name="paternal_sisters_secondary">
        Paternal brothers and paternal sisters get
        ashabah, divided with ratio 2:1\n.
        (Paternal brother get 2x more than paternal sister)
    </string>
    <string name="ineligible">Ineligible</string>
    <string name="ineligible_status">
        Heir who have died is not eligible to get the legacy
    </string>
    <string name="ineligible_faith">
        Heir who isn\'t Muslim is not eligible to get the legacy
    </string>
    <string name="ineligible_killing">
        Heir who played a role in the murder of the deceased
        is not eligible to get the legacy
    </string>
    <string name="disentitled">Disentitled</string>
    <string name="disentitled_children_of_sons">
        Children of sons are disentitled by sons
    </string>
    <string name="disentitled_dad_of_dad">
        Dad of dad is disentitled if the deceased
        left dad
    </string>
    <string name="disentitled_mom_of_dad">
        Mom of dad is disentitled by dad and mom
    </string>
    <string name="disentitled_mom_of_mom">
        Mom of mom is disentitled by mom
    </string>
    <string name="disentitled_full_brothers">
        Full brothers are disentitled by dad and sons
    </string>
    <string name="legacy">Legacy</string>
    <string name="legacy_instruction">
        Fill the amount of legacy to be shared
    </string>
    <string name="calculated_instruction">You can see the results in each heir profile</string>
    <string name="calculated_title">Calculated!</string>
</resources>